--- a/Verifica-vlsm-studente4D.html
+++ b/Verifica-vlsm-studente4D.html
@@ -1055,8 +1055,8 @@
             PC-Alfa1 → Desktop → IP Configuration
         </div>
         <div class="code-body">
-IP Address:     <span class="placeholder">___192.168.0.______</span>
-Subnet Mask:    <span class="placeholder">___.___.___._______</span>
+IP Address:     <span class="placeholder">___192.168.0.65</span>
+Subnet Mask:    <span class="placeholder">255.255.255.240</span>
 Default Gateway: <span class="comment">(lasciare vuoto)</span>
         </div>
     </div>
@@ -1070,8 +1070,8 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
             PC-Alfa2 → Desktop → IP Configuration
         </div>
         <div class="code-body">
-IP Address:     <span class="placeholder">___192.168.0.______</span>
-Subnet Mask:    <span class="placeholder">___.___.___._______</span>
+IP Address:     <span class="placeholder">___192.168.0.66</span>
+Subnet Mask:    <span class="placeholder">255.255.255.240</span>
 Default Gateway: <span class="comment">(lasciare vuoto)</span>
         </div>
     </div>
@@ -1085,8 +1085,8 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
             PC-Beta1 → Desktop → IP Configuration
         </div>
         <div class="code-body">
-IP Address:     <span class="placeholder">___192.168.0.______</span>
-Subnet Mask:    <span class="placeholder">___.___.___._______</span>
+IP Address:     <span class="placeholder">___192.168.0.1</span>
+Subnet Mask:    <span class="placeholder">255.255.255.224</span>
 Default Gateway: <span class="comment">(lasciare vuoto)</span>
         </div>
     </div>
@@ -1100,8 +1100,8 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
             PC-Beta2 → Desktop → IP Configuration
         </div>
         <div class="code-body">
-IP Address:     <span class="placeholder">___192.168.0.______</span>
-Subnet Mask:    <span class="placeholder">___.___.___._______</span>
+IP Address:     <span class="placeholder">___192.168.0.2</span>
+Subnet Mask:    <span class="placeholder">255.255.255.224</span>
 Default Gateway: <span class="comment">(lasciare vuoto)</span>
         </div>
     </div>
@@ -1115,8 +1115,8 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
             PC-Gamma1 → Desktop → IP Configuration
         </div>
         <div class="code-body">
-IP Address:     <span class="placeholder">___192.168.0.______</span>
-Subnet Mask:    <span class="placeholder">___.___.___._______</span>
+IP Address:     <span class="placeholder">___192.168.0.33</span>
+Subnet Mask:    <span class="placeholder">255.255.255.224</span>
 Default Gateway: <span class="comment">(lasciare vuoto)</span>
         </div>
     </div>
@@ -1130,16 +1130,14 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
             PC-Gamma2 → Desktop → IP Configuration
         </div>
         <div class="code-body">
-IP Address:     <span class="placeholder">___192.168.0.______</span>
-Subnet Mask:    <span class="placeholder">___.___.___._______</span>
+IP Address:     <span class="placeholder">___192.168.0.34</span>
+Subnet Mask:    <span class="placeholder">255.255.255.224</span>
 Default Gateway: <span class="comment">(lasciare vuoto)</span>
         </div>
     </div>
 
     <div class="img-placeholder">
-        <div class="icon">✅</div>
-        <div class="label">[IMG_07] — Panoramica della topologia con tutti i PC configurati</div>
-        <div class="hint">Mostra la topologia completa; opzionalmente, posiziona il mouse su un PC per vedere il tooltip con l'IP</div>
+        <img src="img\sezione5_1.png">
     </div>
 
     <div class="exercise-box">
@@ -1189,16 +1187,16 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
                     PC-Alfa1 > Command Prompt
                 </div>
                 <div class="code-body">
-<span class="cmd">C:\&gt;</span> ping <span class="placeholder">192.168.0.______</span>
+<span class="cmd">C:\&gt;</span> ping <span class="placeholder">192.168.0.66</span>
 
-<span class="output">Pinging 192.168.0.______ with 32 bytes of data:</span>
+<span class="output">Pinging 192.168.0.66 with 32 bytes of data:</span>
 
-<span class="output">Reply from 192.168.0.______: bytes=32 time&lt;1ms TTL=128</span>
-<span class="output">Reply from 192.168.0.______: bytes=32 time&lt;1ms TTL=128</span>
-<span class="output">Reply from 192.168.0.______: bytes=32 time&lt;1ms TTL=128</span>
-<span class="output">Reply from 192.168.0.______: bytes=32 time&lt;1ms TTL=128</span>
+<span class="output">Reply from 192.168.0.66: bytes=32 time&lt;1ms TTL=128</span>
+<span class="output">Reply from 192.168.0.66: bytes=32 time&lt;1ms TTL=128</span>
+<span class="output">Reply from 192.168.0.66: bytes=32 time&lt;1ms TTL=128</span>
+<span class="output">Reply from 192.168.0.66: bytes=32 time&lt;1ms TTL=128</span>
 
-<span class="output">Ping statistics for 192.168.0.______:</span>
+<span class="output">Ping statistics for 192.168.0.66:</span>
 <span class="output">    Packets: Sent = 4, Received = 4, Lost = 0 (0% loss)</span>
                 </div>
             </div>
@@ -1215,9 +1213,7 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
     </div>
 
     <div class="img-placeholder">
-        <div class="icon">📟</div>
-        <div class="label">[IMG_08] — Output del comando ping da PC-Alfa1 verso PC-Alfa2 (successo)</div>
-        <div class="hint">Cattura il Command Prompt di PC-Alfa1 mostrando il ping riuscito con 4 Reply</div>
+        <img src="img\sezione6_1.png">
     </div>
 
     <div class="exercise-box">
@@ -1231,21 +1227,11 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
     </div>
 
     <div class="img-placeholder">
-        <div class="icon">📟</div>
-        <div class="label">[IMG_09] — Output del ping tra PC-Beta1 e PC-Beta2 (successo)</div>
-        <div class="hint">Cattura il risultato del ping nella Rete Beta</div>
+        <img src="img\sezione6_2.png">
     </div>
 
     <div class="img-placeholder">
-        <div class="icon">📟</div>
-        <div class="label">[IMG_10] — Output del ping tra PC-Gamma1 e PC-Gamma2 (successo)</div>
-        <div class="hint">Cattura il risultato del ping nella Rete Beta</div>
-    </div>
-
-    <div class="img-placeholder">
-        <div class="icon">📟</div>
-        <div class="label">[IMG_11] — Output del ping tra PC-Gamma1 e PC-Gamma2 (successo)</div>
-        <div class="hint">Cattura il risultato del ping nella Rete Gamma</div>
+        <img src="img\sezione6_3.png">
     </div>
 </section>
 
