--- a/Verifica-vlsm-studente4D.html
+++ b/Verifica-vlsm-studente4D.html
@@ -1259,9 +1259,7 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
                 Clicca su <strong>Simulation</strong> per passare alla modalità di simulazione.
             </p>
             <div class="img-placeholder">
-                <div class="icon">⏱️</div>
-                <div class="label">[IMG_12] — Il pannello Simulation Mode con il pulsante evidenziato</div>
-                <div class="hint">Mostra la barra inferiore di Packet Tracer con la scheda Simulation selezionata</div>
+                <img src="img\sezione7_1.png">
             </div>
         </div>
     </div>
@@ -1277,9 +1275,7 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
                 e altro che potrebbe confondere l'analisi.
             </p>
             <div class="img-placeholder">
-                <div class="icon">🔍</div>
-                <div class="label">[IMG_13] — Filtro protocolli impostato su ICMP nella Simulation Mode</div>
-                <div class="hint">Mostra la finestra Edit Filters con solo ICMP selezionato</div>
+               <img src="img\sezione7_2.png">
             </div>
         </div>
     </div>
@@ -1298,9 +1294,7 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
                 <strong>Capture/Forward</strong>.
             </p>
             <div class="img-placeholder">
-                <div class="icon">✉️</div>
-                <div class="label">[IMG_14] — PDU (busta) creata su PC-Alfa1, pronta per essere inviata</div>
-                <div class="hint">Mostra la busta apparsa sopra PC-Alfa1 nella topologia</div>
+                <img src="img\sezione7_3.png">
             </div>
         </div>
     </div>
@@ -1319,9 +1313,7 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
                 fai clic sulla riga corrispondente per aprire i <strong>dettagli del pacchetto</strong>.
             </p>
             <div class="img-placeholder">
-                <div class="icon">📋</div>
-                <div class="label">[IMG_15] — Event List con il pacchetto ICMP catturato</div>
-                <div class="hint">Mostra l'Event List con le righe dei pacchetti ICMP; evidenzia la riga su cui cliccare</div>
+                <img src="img\sezione7_4.png">
             </div>
         </div>
     </div>
@@ -1363,11 +1355,11 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
             </div>
             <div class="packet-field">
                 <span class="field-name">Src MAC Address</span>
-                <span class="field-value" style="color: var(--accent-pink);">____:____:____  (MAC di PC-Alfa1)</span>
+                <span class="field-value" style="color: var(--accent-pink);">0050:0F91:83AE  (MAC di PC-Alfa1)</span>
             </div>
             <div class="packet-field">
                 <span class="field-name">Dest MAC Address</span>
-                <span class="field-value" style="color: var(--accent-pink);">____:____:____  (MAC di PC-Alfa2)</span>
+                <span class="field-value" style="color: var(--accent-pink);">000A:F305:E389  (MAC di PC-Alfa2)</span>
             </div>
             <div class="packet-field">
                 <span class="field-name">EtherType</span>
@@ -1398,11 +1390,11 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
             </div>
             <div class="packet-field">
                 <span class="field-name">Source IP</span>
-                <span class="field-value" style="color: var(--accent-pink);">192.168.0.______  (IP di PC-Alfa1)</span>
+                <span class="field-value" style="color: var(--accent-pink);">192.168.0.65  (IP di PC-Alfa1)</span>
             </div>
             <div class="packet-field">
                 <span class="field-name">Destination IP</span>
-                <span class="field-value" style="color: var(--accent-pink);">192.168.0.______  (IP di PC-Alfa2)</span>
+                <span class="field-value" style="color: var(--accent-pink);">192.168.0.66  (IP di PC-Alfa2)</span>
             </div>
         </div>
 
@@ -1427,15 +1419,11 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
     </div>
 
     <div class="img-placeholder">
-        <div class="icon">🔬</div>
-        <div class="label">[IMG_16] — Finestra PDU Information: scheda OSI Model con i dettagli di ogni livello</div>
-        <div class="hint">Cattura la schermata PDU Information espansa con tutti i livelli visibili</div>
+       <img src="img\sezione7_5.png">
     </div>
 
     <div class="img-placeholder">
-        <div class="icon">🔬</div>
-        <div class="label">[IMG_17] — Finestra PDU Information: scheda Inbound/Outbound PDU Details</div>
-        <div class="hint">Cattura la scheda che mostra i dettagli in formato tabellare (Inbound PDU / Outbound PDU)</div>
+        <img src="img\sezione7_6.png">
     </div>
 
     <div class="info-box">
@@ -1465,11 +1453,11 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
             </div>
             <div class="packet-field">
                 <span class="field-name">Source IP</span>
-                <span class="field-value" style="color: var(--accent-pink);">192.168.0.______  (IP di PC-Alfa2 — ora è la sorgente!)</span>
+                <span class="field-value" style="color: var(--accent-pink);">192.168.0.66  (IP di PC-Alfa2 — ora è la sorgente!)</span>
             </div>
             <div class="packet-field">
                 <span class="field-name">Destination IP</span>
-                <span class="field-value" style="color: var(--accent-pink);">192.168.0.______  (IP di PC-Alfa1 — ora è la destinazione!)</span>
+                <span class="field-value" style="color: var(--accent-pink);">192.168.0.65  (IP di PC-Alfa1 — ora è la destinazione!)</span>
             </div>
         </div>
         <div class="packet-layer">
@@ -1489,9 +1477,7 @@ Default Gateway: <span class="comment">(lasciare vuoto)</span>
     </div>
 
     <div class="img-placeholder">
-        <div class="icon">🔬</div>
-        <div class="label">[IMG_18] — PDU Information dell'Echo Reply: nota gli IP invertiti e Type = 0</div>
-        <div class="hint">Cattura i dettagli del pacchetto di risposta, evidenziando il campo Type e gli IP invertiti</div>
+        <img src="img\sezione7_7.png">
     </div>
 </section>
 
